[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameLevels/BoardGenerator.gd" type="Script" id=1]
[ext_resource path="res://GameLevels/godCam.gd" type="Script" id=2]
[ext_resource path="res://GUI/MoneyUI.gd" type="Script" id=3]
[ext_resource path="res://GUI/EngineMaster.gd" type="Script" id=4]
[ext_resource path="res://GUI/GameManager.gd" type="Script" id=5]
[ext_resource path="res://GUI/TrainTracker.gd" type="Script" id=6]
[ext_resource path="res://GameLevels/trainPurchase.gd" type="Script" id=7]
[ext_resource path="res://GUI/TrackBuilder.gd" type="Script" id=8]
[ext_resource path="res://GUI/TooltipMenu.gd" type="Script" id=9]
[ext_resource path="res://GUI/TrainAndTracks.gd" type="Script" id=16]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array(  )
}

[node name="GAME" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="Node2D"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="Node2D/UI"]
anchor_bottom = 1.0
margin_right = 119.0

[node name="MarginContainer" type="MarginContainer" parent="Node2D/UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 11.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/UI/Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 206.0
margin_bottom = 580.0
script = ExtResource( 7 )

[node name="Button" type="Button" parent="Node2D/UI/Control/MarginContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 20.0
text = "Build Track"

[node name="Button2" type="Button" parent="Node2D/UI/Control/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 186.0
margin_bottom = 44.0
text = "Build Switch"

[node name="Button3" type="Button" parent="Node2D/UI/Control/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 186.0
margin_bottom = 68.0
text = "Erase Track"

[node name="Button4" type="Button" parent="Node2D/UI/Control/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 186.0
margin_bottom = 92.0
text = "Buy Tank Engine - $10,000"

[node name="Button5" type="Button" parent="Node2D/UI/Control/MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 186.0
margin_bottom = 116.0
text = "Buy Passenger Car - $2,500"

[node name="VBoxContainer2" type="VBoxContainer" parent="Node2D/UI/Control/MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 206.0
margin_bottom = 580.0
script = ExtResource( 4 )

[node name="Button" type="Button" parent="Node2D/UI/Control/MarginContainer/VBoxContainer2"]
margin_right = 90.0
margin_bottom = 20.0

[node name="Control2" type="Control" parent="Node2D/UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -125.0

[node name="Panel" type="Panel" parent="Node2D/UI/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Node2D/UI/Control2"]
anchor_bottom = 1.0
margin_left = 716.0
margin_right = 1024.0

[node name="INFOBOX" type="Panel" parent="Node2D/UI/Control2/MarginContainer"]
margin_right = 308.0
margin_bottom = 125.0

[node name="Cost" type="Label" parent="Node2D/UI/Control2/MarginContainer/INFOBOX"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -7.0
margin_right = 51.0
margin_bottom = 7.0
text = "COST - 1000000"
script = ExtResource( 9 )

[node name="ProgressBar" type="ProgressBar" parent="Node2D/UI/Control2/MarginContainer/INFOBOX"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
value = 35.0

[node name="MarginContainer2" type="MarginContainer" parent="Node2D/UI/Control2"]
anchor_bottom = 1.0
margin_right = 134.0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/UI/Control2/MarginContainer2"]
margin_right = 134.0
margin_bottom = 125.0

[node name="Day" type="Label" parent="Node2D/UI/Control2/MarginContainer2/VBoxContainer"]
margin_right = 134.0
margin_bottom = 14.0
text = "Current Day"

[node name="Money" type="Label" parent="Node2D/UI/Control2/MarginContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 134.0
margin_bottom = 32.0
text = "$ Money"
script = ExtResource( 3 )

[node name="TrainsLeft" type="Label" parent="Node2D/UI/Control2/MarginContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 134.0
margin_bottom = 50.0
text = "Trains Left to Move"

[node name="NextDay" type="Button" parent="Node2D/UI/Control2/MarginContainer2/VBoxContainer"]
margin_top = 54.0
margin_right = 134.0
margin_bottom = 74.0
text = "NEXT DAY"

[node name="MarginContainer3" type="MarginContainer" parent="Node2D/UI/Control2"]
anchor_bottom = 1.0
margin_left = 150.0
margin_right = 708.0

[node name="ScrollContainer" type="ScrollContainer" parent="Node2D/UI/Control2/MarginContainer3"]
margin_right = 558.0
margin_bottom = 125.0

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/UI/Control2/MarginContainer3/ScrollContainer"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="Node2D"]
current = true
script = ExtResource( 2 )

[node name="TrackBuilder" type="Node2D" parent="Node2D"]
script = ExtResource( 8 )

[node name="EditablePath" type="Path2D" parent="Node2D/TrackBuilder"]
z_index = 1
curve = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Node2D/TrackBuilder"]
z_index = 1

[node name="EditablePath2" type="Path2D" parent="Node2D/TrackBuilder"]
z_index = 1
curve = SubResource( 2 )

[node name="Line2D2" type="Line2D" parent="Node2D/TrackBuilder"]
z_index = 1

[node name="Train and Tracks" type="Node2D" parent="Node2D"]
position = Vector2( -51, -105 )
script = ExtResource( 16 )

[node name="Timer" type="Timer" parent="Node2D/Train and Tracks"]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="pressed" from="Node2D/UI/Control/MarginContainer/VBoxContainer/Button" to="Node2D/TrackBuilder" method="_on_BuildingTrackButton_pressed"]
[connection signal="pressed" from="Node2D/UI/Control/MarginContainer/VBoxContainer/Button2" to="Node2D/TrackBuilder" method="_on_Button2_pressed"]
[connection signal="pressed" from="Node2D/UI/Control/MarginContainer/VBoxContainer/Button4" to="Node2D/UI/Control/MarginContainer/VBoxContainer" method="buyTank"]
[connection signal="pressed" from="Node2D/UI/Control2/MarginContainer2/VBoxContainer/NextDay" to="Node2D/UI" method="NextDay"]
[connection signal="timeout" from="Node2D/Train and Tracks/Timer" to="Node2D/Train and Tracks" method="_on_Timer_timeout"]
